--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-bitshares==0.1.9
-configobj==5.0.6
-redis==2.10.6
-sanic==0.7.0
-sanic-compress==0.1.1
+bitshares>=0.1.9
+configobj>=5.0.6
+redis>=2.10.6
+sanic>=0.7.0
+sanic-compress>=0.1.1
